--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -53,19 +53,19 @@ var imc = (peso/quadrado);
 	
 	if((sexo=="F")){
 
-		if(imc<20.7){
+		if(imc<19.1){
 				alert("Abaixo do Peso");
 		}
-		else if(imc>=20.7 && imc<26.4){
+		else if(imc>=19.1 && imc<=25.8){
 				alert("Peso ideal");
 		}
-		else if(imc>=26.5 && imc<27.8) {
+		else if(imc>=25.9 && imc<=27.3) {
 				alert("Pouco acima do peso");
 		}
-		else if(imc>=27.9 && imc<31.1) {
+		else if(imc>=27.4 && imc<=32.3) {
 				alert("Acima do peso");
 		}
-		else if (imc>31.2){
+		else if (imc>=32.4){
 				alert("Obesidade");
 		}	
 	}else if((sexo=="M")){
@@ -73,13 +73,13 @@ var imc = (peso/quadrado);
 		if(imc<20.7){
 				alert("Abaixo do Peso");
 		}
-		else if(imc>=20.7 && imc<26.4){
+		else if(imc>=20.7 && imc<=26.4){
 				alert("Peso ideal");
 		}
-		else if(imc>=26.5 && imc<27.8) {
+		else if(imc>=26.5 && imc<=27.8) {
 				alert("Pouco acima do peso");
 		}
-		else if(imc>=27.9 && imc<31.1) {
+		else if(imc>=27.9 && imc<=31.1) {
 				alert("Acima do peso");
 		}
 		else if (imc>31.2){
